[package]
name = "voirs-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Unified SDK and public API for VoiRS speech synthesis"

[lib]
name = "voirs"
path = "src/lib.rs"

[dependencies]
# Re-export all core crates
voirs-g2p = { path = "../voirs-g2p" }
voirs-acoustic = { path = "../voirs-acoustic" }
voirs-vocoder = { path = "../voirs-vocoder" }
voirs-dataset = { path = "../voirs-dataset" }

# Common dependencies for the unified API
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hound.workspace = true
toml.workspace = true
fastrand.workspace = true
hf-hub.workspace = true
reqwest.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
default = []
gpu = ["voirs-acoustic/gpu", "voirs-vocoder/gpu"]