[package]
name = "voirs-singing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Singing voice synthesis for VoiRS"
homepage.workspace = true
documentation = "https://docs.rs/voirs-singing"
repository.workspace = true
categories = ["multimedia::audio", "multimedia", "science"]
keywords = ["voice", "singing", "synthesis", "music", "audio"]

[dependencies]
# Core dependencies
candle-core = { workspace = true }
candle-nn = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Audio processing
rustfft = { workspace = true }
dasp = { workspace = true }
hound = { workspace = true }

# Musical processing
musicxml = { workspace = true, optional = true }
midly = { workspace = true, optional = true }

# Numerical computing
ndarray = { workspace = true }
rand = { workspace = true }
nalgebra = { workspace = true }

# Utilities
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
async-trait = { workspace = true }
base64 = { workspace = true }

# WebAssembly support
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = [
    "console",
    "AudioContext",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioDestinationNode",
    "AudioNode",
] }
js-sys = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
futures = { workspace = true }
wasm-bindgen-test = { workspace = true }


[features]
default = []
musicxml-support = ["musicxml"]
midi-support = ["midly"]
advanced-effects = []
wasm-support = [
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "web-sys",
    "js-sys",
    "console_error_panic_hook",
]

[lints]
workspace = true