[package]
name = "voirs-vocoder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Neural vocoder inference for VoiRS (HiFi-GAN/DiffWave)"

[lib]
name = "voirs_vocoder"
crate-type = ["lib"]

[dependencies]
# ML/Tensor libraries
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
ort = { workspace = true, optional = true }
safetensors.workspace = true
hf-hub.workspace = true

# Math and DSP
ndarray.workspace = true
realfft.workspace = true
rustfft.workspace = true

# Audio
hound.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
toml.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Async support
async-trait.workspace = true
tokio.workspace = true
futures.workspace = true
async-stream.workspace = true
chrono.workspace = true

# Random number generation
fastrand.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
default = ["candle"]
candle = ["dep:candle-core", "dep:candle-nn"]
onnx = ["dep:ort"]
gpu = ["candle-core?/cuda", "ort?/cuda"]