[package]
name = "voirs-vocoder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/voirs-vocoder"
keywords.workspace = true
categories = ["multimedia::audio", "science", "algorithms"]
rust-version.workspace = true
description = "Neural vocoder inference for VoiRS (HiFi-GAN/DiffWave)"

[lib]
name = "voirs_vocoder"
crate-type = ["lib"]

[dependencies]
# ML/Tensor libraries
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
ort = { workspace = true, optional = true }
safetensors.workspace = true
hf-hub.workspace = true

# Math and DSP
ndarray.workspace = true
realfft.workspace = true
rustfft.workspace = true
half.workspace = true

# Audio
hound.workspace = true
symphonia.workspace = true
opus.workspace = true
flac-bound.workspace = true
mp3lame-encoder.workspace = true
mp4.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
toml.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Async support
async-trait.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
async-stream.workspace = true
chrono.workspace = true

# Random number generation
fastrand.workspace = true

# System info
num_cpus.workspace = true

# Lock-free data structures
crossbeam-utils.workspace = true
parking_lot.workspace = true

# Parallel processing
rayon.workspace = true

# Static initialization
once_cell.workspace = true

# Real-time audio drivers
cpal.workspace = true

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true

[features]
default = ["candle"]
candle = ["dep:candle-core", "dep:candle-nn"]
onnx = ["dep:ort"]
gpu = []
cuda = ["candle-core?/cuda", "ort?/cuda"]
metal = ["candle-core?/metal"]
coreml = ["ort?/coreml"]

[[bench]]
name = "rtf_benchmark"
harness = false

[[bench]]
name = "latency_benchmark" 
harness = false

[[bench]]
name = "memory_benchmark"
harness = false
[lints]
workspace = true
